# FPL-Recommender-Weekly

./: README.md  app.py  pyproject.toml  requirements.txt  run_tests.py  test_web_scraper.py
.streamlit/: config.toml
data/: fixtures.csv  performance_history.csv  players.csv  teams.csv
src/: budget_calculator.py  data_manager.py  opponent_analyzer.py  performance_tracker.py  player_evaluation.py  team_optimizer.py  utils.py  web_scraper.py
tests/: test_budget_calculator.py  test_opponent_analyzer.py  test_player_evaluation.py  test_team_optimizer.py  test_utils.py
