[project]
name = "fpl-recom"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11.10"
dependencies = [
    "streamlit (>=1.24.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    "plotly (>=5.14.0,<6.0.0)",
    "pytest (>=7.3.1,<8.0.0)",
    "black (>=23.3.0,<24.0.0)",
    "flake8 (>=6.0.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
