[tool.poetry]
name = "football-team-recommender"
version = "0.1.0"
description = "A football team recommendation system that builds optimal lineups based on player performance, budget constraints, and opponent analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.24.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
plotly = "^5.14.0"
trafilatura = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"